// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToSnapshot should return a snapshot from a valid vNode 1`] = `
<div
  foo="bar"
/>
`;

exports[`renderToSnapshot should return a snapshot with className prop 1`] = `
<div
  className="test"
>
  Test
</div>
`;

exports[`renderToSnapshot should return a snapshot with className prop, multiple children 1`] = `
<div
  className="test"
>
  <span>
    a
  </span>
  <span>
    b
  </span>
  <span>
    1
  </span>
</div>
`;
